--- a/themes/academic/layouts/_default/single.html
+++ b/themes/academic/layouts/_default/single.html
@@ -1,10 +1,10 @@
 {{- define "main" -}}
 
-<article class="article">
+<article class="article"
 
   {{ partial "page_header" . }}
 
-  <div class="article-container">
+  <div class=\"article-container\">
 
     <div class="article-style">
       {{ .Content }}
