--- a/themes/academic/layouts/_default/single.html
+++ b/themes/academic/layouts/_default/single.html
@@ -4,7 +4,7 @@
 
   {{ partial "page_header" . }}
 
-  <div class=\"article-container\">
+  div class="article-container">
 
     <div class="article-style">
       {{ .Content }}
